true-hello-world/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: true-hello-world
spec:
  type: ClusterIP
  ports:
    - name: helloworld
      port: 80
  selector:
    app: true-hello-world
